# sportradar_project

./: pyproject.toml
src/sportradar/: __main__.py
src/sportradar/game/: game.py
src/sportradar/game/card_game/: card.py
src/sportradar/game/card_game/poker/: hand.py  poker.py
src/sportradar/internet/email/: sportradar_email_address_validator.py
src/sportradar/task/: first_task.py  task_base.py
tests/game/card_game/poker/: test_hand.py
tests/internet/email/: test_sportradar_email_address_validator.py
tests/task/: test_first_task.py
