[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sportradar"
version = "1.0.0"

[project.scripts]
boot = "sportradar.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --tb=short --strict-markers"

testpaths = ["tests"]

#dependencies
#dependencies = [
#    "utilityx @ git+https://github.com/donkarlo/utilityx_project.git@main"
#]